--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -3,9 +3,16 @@
   {
    "cell_type": "markdown",
    "source": [
+    "To work with google colab without storing files on the local computer, it will be necessary to store the python scripts in a\n",
+    "folder on a google drive. The code below will help initialize your folder to work for the competition.\n",
+    "\n",
+    "Feel free to develop in a different development environment, but this notebook should help you get things to run during the final.\n",
+    "\n",
+    "Change the code in the bridge_designs_template.py so that when it is run, the behavior is what you intend to use for designing the bridge. That is the easiest way of using the code.\n",
+    "\n",
     "The cell below contains some code that you can modify and use to try out new strategies.\n",
     "It is commented out for now.\n",
-    "Below that, there is the default behavior shown. That should help you get started."
+    "Below that, there is the default behavior shown. That should help you get started.\n"
    ],
    "metadata": {
     "collapsed": false,
